--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -12,6 +12,7 @@
     <string name="flash_button_description">Modo de flash</string>
     <string name="flip_camera_button_description">Vire a câmera</string>
     <string name="gallery_button_description">Galeria</string>
+    <string name="google_lens_button_description">Abrir o Google Lens</string>
     <string name="image_view_description">Pré-visualização de imagem</string>
     <string name="photo_mode_button_description">Alternar para o modo de foto</string>
     <string name="pro_button_description">Configurações profissionais</string>
